# pymmcore-eda

./: .gitignore  .pre-commit-config.yaml  README.md  actuator.py  analyser.py  event_hub.py  events.py  limitations.md  main.py  pyproject.toml  queue_manager.py  run.py  run_smart.py  structure.md  time_machine.py
examples/: interactive.py  simple.py  smart.py
smart_scan/: custom-engine.py  custom_engine.py  devices.py  interpreter_scan.py  pyserial.py  smart-scan.ipynb  smart_actuator.py  smart_actuator_scan.py
smart_scan/Logs/: Log_Default
smart_scan/dependencies/: dwfconstants.py
smart_scan/helpers/: class_helpers.py  function_helpers.py  loggingDefaults.py  loggingHelper.py
smart_scan/resources/: Test-1.tif  Test.tif  logStrings.py  mask.tif
smart_scan/settings/: instrumentSettings.py  instrumentSettingsDefaults.py
src/pymmcore_eda/: _eda_event.py  _eda_sequence.py  _event_queue.py  _logger.py  _runner.py  actuator.py  analyser.py  event_hub.py  interpreter.py  queue_manager.py  run.py  time_machine.py  writer.py
src/pymmcore_eda/helpers/: function_helpers.py  logging.py
tests/: _runner.py  conftest.py  test_actuator_reg.py  test_complex_acq.py  test_dynamic_runner.py  test_eda_sequence.py  test_event_queue.py  test_event_sorting.py  test_frap_maps.py  test_mda.py  test_mda_eda_event.py  test_mda_eda_sequence.py  test_no_mmc.py  test_pause_cancel.py  test_start_timing.py  test_timer_reset.py  test_writer.py  test_writer_signal.py
